--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,22 @@
 body
 {
-    color: blueviolet;
+    color: #000;
     text-align: center;
     font-family: Arial;
+    font-size: 18px;
+    margin: 0px;
+    padding : 0px ;
+}
+#container
+{
+    width: 70% ;
+    padding: 1em ;
+    text-align: left;
+    border: 1px  solid #333;
+    margin: 0 auto ;
+}
+
+#continer h1
+{
+    font-size: 20px;
 }
