--- a/css/estilos.css
+++ b/css/estilos.css
@@ -7,6 +7,25 @@ body
     margin: 0px;
     padding : 0px ;
 }
+
+#cabecera
+{
+    background: #33a;
+    color: white;
+    box-shadow: 0px 5px 50px 0px rgba(0, 0, 0 , 0.6);
+    margin: 0;
+    padding: 0.5em;
+    font-weight: bold;
+
+}
+
+#cabecera #tagline
+{
+    padding: 0 0 0 1em;
+    font-weight: normal;
+    font-size: 0.8em;
+}
+
 #container
 {
     width: 70% ;
@@ -15,8 +34,12 @@ body
     border: 1px  solid #333;
     margin: 0 auto ;
 }
-
 #continer h1
 {
     font-size: 20px;
+}
+
+#post
+{
+    padding: 1em;
 }
